module9/httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
  labels:
    app: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - name: httpserver
        image: roads001/httpserver:v2
        #imagePullPolicy: IfNotPresent default
        imagePullPolicy: Always
        ports:
        - containerPort: 8765
        resources:
          limits:
            memory: "200Mi"
            cpu: "700m"
          requests:
            memory: "200Mi"
            cpu: "700m"      
        readinessProbe:
          tcpSocket:
            port: 8765
          initialDelaySeconds: 5
          periodSeconds: 10      
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8765
          initialDelaySeconds: 15
          periodSeconds: 20   

---
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8765"
spec:
  type: ClusterIP
  selector:
    app: httpserver
  ports:
  - name: httpserver-service-port
    protocol: TCP
    port: 80
    targetPort: 8765
