module9/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8scamp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpserver-service
                port:
                  number: 80
            
    # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - k8scamp.com
      secretName: my-tls
